{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 86,
  "lineage": "5a1ef78b-156c-a587-a77b-4a78f512ce8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c1324f21eba1c74",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0da97a56360c81d39",
            "domain": "vpc",
            "id": "eipalloc-03c1324f21eba1c74",
            "instance": "i-0b69af802be6eca2e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-022fe53102492a5df",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-50-16-115-93.compute-1.amazonaws.com",
            "public_ip": "50.16.115.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_1",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0992ede68a4924066",
            "associate_with_private_ip": "15.0.1.50",
            "association_id": "eipassoc-078b6a9775fd815cc",
            "domain": "vpc",
            "id": "eipalloc-0992ede68a4924066",
            "instance": "i-0cb5550c7cd0d9e93",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b4ac8d92e06c81bd",
            "private_dns": "ip-15-0-1-50.ec2.internal",
            "private_ip": "15.0.1.50",
            "public_dns": "ec2-54-90-21-187.compute-1.amazonaws.com",
            "public_ip": "54.90.21.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw-web",
            "aws_network_interface.web_if",
            "aws_security_group.allow_web",
            "aws_security_group.web_sg",
            "aws_subnet.subnet_web",
            "aws_vpc.first-vpc",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-app-ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd59ecaf368e5ccf",
            "arn": "arn:aws:ec2:us-east-1:654654476438:instance/i-0cb5550c7cd0d9e93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb5550c7cd0d9e93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0b4ac8d92e06c81bd"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b4ac8d92e06c81bd",
            "private_dns": "ip-15-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "15.0.1.50",
            "public_ip": "54.90.21.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068deeb3517a47f19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0266bf9e47229d4",
            "tags": {
              "Name": "web-app-server-01"
            },
            "tags_all": {
              "Name": "web-app-server-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c1ce620d62747cd"
            ]
          },
          "dependencies": [
            "aws_network_interface.web_if",
            "aws_security_group.allow_web",
            "aws_security_group.web_sg",
            "aws_subnet.subnet_web",
            "aws_vpc.first-vpc",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd59ecaf368e5ccf",
            "arn": "arn:aws:ec2:us-east-1:654654476438:instance/i-0b69af802be6eca2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b69af802be6eca2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-022fe53102492a5df"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-022fe53102492a5df",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "50.16.115.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029f14f4e26dee7c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e37c43ca84a3d0f",
            "tags": {
              "Name": "static-web-server"
            },
            "tags_all": {
              "Name": "static-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ca351477b867485"
            ]
          },
          "dependencies": [
            "aws_network_interface.web",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_1",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:internet-gateway/igw-0c8424afc6edce5f7",
            "id": "igw-0c8424afc6edce5f7",
            "owner_id": "654654476438",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0e2db61d8c01bc49f"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:internet-gateway/igw-0a7308ef124bc4c7f",
            "id": "igw-0a7308ef124bc4c7f",
            "owner_id": "654654476438",
            "tags": {
              "Name": "main-web"
            },
            "tags_all": {
              "Name": "main-web"
            },
            "vpc_id": "vpc-03450af041c75376d"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:network-interface/eni-022fe53102492a5df",
            "attachment": [
              {
                "attachment_id": "eni-attach-007fef76a34490550",
                "device_index": 0,
                "instance": "i-0b69af802be6eca2e"
              }
            ],
            "id": "eni-022fe53102492a5df",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:93:a7:70:8e:7f",
            "owner_id": "654654476438",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06ca351477b867485"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e37c43ca84a3d0f"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet_1",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_if",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:network-interface/eni-0b4ac8d92e06c81bd",
            "attachment": [
              {
                "attachment_id": "eni-attach-0b24801b7b0f41a11",
                "device_index": 0,
                "instance": "i-0cb5550c7cd0d9e93"
              }
            ],
            "id": "eni-0b4ac8d92e06c81bd",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:2c:61:38:c2:61",
            "owner_id": "654654476438",
            "private_ip": "15.0.1.50",
            "private_ip_list": [
              "15.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "15.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07c1ce620d62747cd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0266bf9e47229d4"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_security_group.web_sg",
            "aws_subnet.subnet_web",
            "aws_vpc.first-vpc",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:route-table/rtb-032778d294a85fc28",
            "id": "rtb-032778d294a85fc28",
            "owner_id": "654654476438",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8424afc6edce5f7",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8424afc6edce5f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2db61d8c01bc49f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:route-table/rtb-0278165ea4f0a3cea",
            "id": "rtb-0278165ea4f0a3cea",
            "owner_id": "654654476438",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7308ef124bc4c7f",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7308ef124bc4c7f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-03450af041c75376d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-web",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028cfe871d0b88098",
            "route_table_id": "rtb-032778d294a85fc28",
            "subnet_id": "subnet-00e37c43ca84a3d0f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet_1",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5656319c507349",
            "route_table_id": "rtb-0278165ea4f0a3cea",
            "subnet_id": "subnet-0e0266bf9e47229d4"
          },
          "dependencies": [
            "aws_internet_gateway.gw-web",
            "aws_route_table.web-route-table",
            "aws_subnet.subnet_web",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:security-group/sg-06ca351477b867485",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ca351477b867485",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "654654476438",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2db61d8c01bc49f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:security-group/sg-07c1ce620d62747cd",
            "description": "Web Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c1ce620d62747cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "654654476438",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03450af041c75376d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.first-vpc",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:subnet/subnet-00e37c43ca84a3d0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e37c43ca84a3d0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654476438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet"
            },
            "tags_all": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0e2db61d8c01bc49f"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:subnet/subnet-0e0266bf9e47229d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "15.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0266bf9e47229d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654476438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-subnet"
            },
            "tags_all": {
              "Name": "web-subnet"
            },
            "vpc_id": "vpc-03450af041c75376d"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:vpc/vpc-0e2db61d8c01bc49f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcca0a6ed6785a8f",
            "default_route_table_id": "rtb-021d08f1ec1fd1fae",
            "default_security_group_id": "sg-0777b46c0a78ad47c",
            "dhcp_options_id": "dopt-02e70191a519cccdb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2db61d8c01bc49f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021d08f1ec1fd1fae",
            "owner_id": "654654476438",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654476438:vpc/vpc-03450af041c75376d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "15.0.0.0/16",
            "default_network_acl_id": "acl-0cb5f10fc0d65c58e",
            "default_route_table_id": "rtb-0337f0df4e8e05ebb",
            "default_security_group_id": "sg-042ef93e237829384",
            "dhcp_options_id": "dopt-02e70191a519cccdb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03450af041c75376d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0337f0df4e8e05ebb",
            "owner_id": "654654476438",
            "tags": {
              "Name": "web-app"
            },
            "tags_all": {
              "Name": "web-app"
            }
          }
        }
      ]
    }
  ]
}